--- a/Plugins/Viewport_EXR_Screenshot/Viewport_EXR_Screenshot.uplugin
+++ b/Plugins/Viewport_EXR_Screenshot/Viewport_EXR_Screenshot.uplugin
@@ -4,9 +4,9 @@
 	"VersionName": "1.0",
 	"FriendlyName": "Viewport_EXR_Screenshot",
 	"Description": "Take High Dynamic Range EXR Screenshots from viewport ",
-	"Category": "Other",
-	"CreatedBy": "Sae",
-	"CreatedByURL": "",
+	"Category": "Rendering",
+	"CreatedBy": "GitHub",
+	"CreatedByURL": "https://github.com/sayoojjs/Viewport-EXR-Screenshot-Tool",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "https://www.artstation.com/sayoojjs",
